<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/dice_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/empty_dice"
        tools:src="@drawable/dice_1"
        android:contentDescription="@string/dice"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/roll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/tiny_margin"
        android:text="@string/roll" />

    <Button
        android:id="@+id/about_me_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginTop="@dimen/tiny_margin"
        android:layout_marginBottom="@dimen/tiny_margin"
        android:text="@string/about_me" />

    <Button
        android:id="@+id/recycler_view_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginTop="@dimen/tiny_margin"
        android:layout_marginBottom="@dimen/tiny_margin"
        android:text="@string/recycler_view" />

    <Button
        android:id="@+id/material_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginTop="@dimen/tiny_margin"
        android:layout_marginBottom="@dimen/tiny_margin"
        android:text="@string/text_material_dialog_example" />

    <Button
        android:id="@+id/time_fighter_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginTop="@dimen/tiny_margin"
        android:layout_marginBottom="@dimen/tiny_margin"
        android:text="@string/text_time_fighter" />

</LinearLayout>